# rag-kb

./: .dockerignore  .env.example  .gitignore  CI-CD-README.md  Dockerfile  README.md  TESTING_SUMMARY.md  app.py  ctl.sh  docker-compose.yml  pyproject.toml  requirements.txt  validate-workflow.sh
.cursor/plans/: add-clear-and-submit-3361bdd4.plan.md  dockerfile-for-rag-kb-b90676e4.plan.md  fix-ggml-embedding-errors-09d93135.plan.md  fix-query-performance-716c33fe.plan.md  github-hf-spaces-sync-3c1d6a82.plan.md  optimize-embedding-loading-8115c2b5.plan.md  rag-kb-comprehensive-testing-a51facb1.plan.md
.github/workflows/: ci-cd.yml  sync-to-hf-spaces.yml
data/: README.md
models/: README.md
tests/: __init__.py  conftest.py  conftest_full.py  conftest_minimal.py  test_basic.py
tests/integration/: test_database_operations.py  test_rag_workflow.py
tests/ui/: test_gradio_components.py
tests/unit/: test_embedding_function.py  test_rag_system.py  test_utility_functions.py
